--- a/public/style.css
+++ b/public/style.css
@@ -30,3 +30,17 @@ h1{
 main{
     margin-top: 85px;
 }
+footer{
+    width: 100%;
+    height: 50px;
+    align-items: center;
+    bottom: 0;
+    position: absolute;
+    background-color: #fff;
+    display: flex;
+    justify-content: center;
+
+}
+footer span{
+    font-family:'Recursive', sans-serif;;
+}
