--- a/public/style.css
+++ b/public/style.css
@@ -71,6 +71,7 @@ h1{
 }
 main{
     margin-top: 40px;
+    margin-bottom: 80px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -108,12 +109,15 @@ main{
     border-radius: 5px;
     margin-top: 5px;
     position: relative;
+    font-size: 12px;
 }
-.question-container span,.initial-question-container span{
+.question-container span,.initial-question-container span,.answer-container span{
     display: block;
     padding: 10px 5px;
     font-family: 'Recursive', sans-serif;
     color: #333333;
+    font-size: 12px;
+    text-align: justify;
 }
 .question-container button{
     bottom: 5px;
@@ -121,17 +125,52 @@ main{
     position: absolute;
     border: none;
     background-color: #FFFFD5;
+    font-size: 7px;
 }
+.answer-container{
+    width: 185px;
+    height: 80px;
+    display: flex;
+    flex-direction: column;
+    background-color: #FFFFD5;
+    box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.15);
+    border-radius: 5px;
+    margin-top: 5px;
+    position: relative;
+    font-size: 12px;
+    font-family: 'Recursive', sans-serif;
+}
+.answer-container div{
+    display: flex;
+    justify-content: space-between;
+}
+.answer-container button{
+    width: 55px;
+    height: 24px;
+    border-radius: 5px;
+    border: none;
+    font-family: 'Recursive', sans-serif;
+    font-size: 7px;
+}
+.bt1{
+    background-color: red;
+}
+.bt2{
+    background-color: yellow;
+}
+.bt3{
+    background-color: green;
+}
+
 footer{
     width: 100%;
     height: 50px;
     align-items: center;
     bottom: 0;
-    position: absolute;
+    position: fixed;
     background-color: #fff;
     display: flex;
     justify-content: center;
-
 }
 footer span{
     font-family:'Recursive', sans-serif;;
