--- a/public/style.css
+++ b/public/style.css
@@ -6,6 +6,9 @@
 body{
     background-color: #FB6C6B;
 }
+button{
+    cursor: pointer;
+}
 /* initial page*/
 .InitialPage{
     display: flex;
@@ -30,7 +33,7 @@ body{
     font-family: 'Righteous', cursive;
     font-style: normal;
     font-weight: 400;
-    font-size: 25px;
+    font-size: 35px;
     line-height: 31px;
     display: flex;
     align-items: center;
@@ -38,14 +41,16 @@ body{
     letter-spacing: -0.012em;
 }
 .InitialPage button{
-    width: 141px;
-    height: 30px;
+    width: 160px;
+    height: 60px;
     background-color: #fff;
     color: red;
     border: 1px solid #D70900;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 5px;
     font-family: 'Recursive', sans-serif;;
+    font-size: 17px;
+    cursor: pointer;
 }
 /* card page*/
 header{
@@ -60,14 +65,18 @@ header div{
 h1{
     color: #fff;
     font-family: 'Righteous', cursive;
-    width: 100px;
+    width: 200px;
     display: flex;
     align-items: center;
-
+    justify-content: center;
     font-style: normal;
     font-weight: 400;
-    font-size: 20px;
+    font-size: 35px;
     line-height: 25px;
+}
+header img{
+    width: 60px;
+    height: 60px;
 }
 main{
     margin-top: 40px;
@@ -77,8 +86,8 @@ main{
     align-items: center;
 }
 .initial-question-container{
-    width: 185px;
-    height: 40px;
+    width: 300px;
+    height: 65px;
     background-color: #fff;
     box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.15);
     border-radius: 5px;
@@ -102,8 +111,8 @@ main{
 }
 
 .question-container{
-    width: 185px;
-    height: 80px;
+    width: 299px;
+    height: 131px;
     background-color: #FFFFD5;
     box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.15);
     border-radius: 5px;
@@ -112,12 +121,13 @@ main{
     font-size: 12px;
 }
 .question-container span,.initial-question-container span,.answer-container span{
-    display: block;
-    padding: 10px 5px;
+    display: flex;
+    justify-content: flex-start;
+    padding: 8px 5px;
     font-family: 'Recursive', sans-serif;
     color: #333333;
-    font-size: 12px;
-    text-align: justify;
+    font-size: 18px;
+    max-height: 40px;
 }
 .question-container button{
     bottom: 5px;
@@ -125,11 +135,11 @@ main{
     position: absolute;
     border: none;
     background-color: #FFFFD5;
-    font-size: 7px;
+    font-size: 12px;
 }
 .answer-container{
-    width: 185px;
-    height: 80px;
+    width: 300px;
+    height: 131px;
     display: flex;
     flex-direction: column;
     background-color: #FFFFD5;
@@ -142,15 +152,18 @@ main{
 }
 .answer-container div{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
+    position: absolute;
+    bottom: 5px;
+    width: 100%;
 }
 .answer-container button{
-    width: 55px;
-    height: 24px;
+    width: 85px;
+    height: 35px;
     border-radius: 5px;
     border: none;
     font-family: 'Recursive', sans-serif;
-    font-size: 7px;
+    font-size: 12px;
 }
 .bt1{
     background-color: red;
@@ -173,5 +186,13 @@ footer{
     justify-content: center;
 }
 footer span{
-    font-family:'Recursive', sans-serif;;
+    font-family:'Recursive', sans-serif;
+    position: absolute;
+    width: 145px;
+    height: 22px;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 22px;
+    color: #333333;
 }
