--- a/public/style.css
+++ b/public/style.css
@@ -174,6 +174,18 @@ main{
 .bt3{
     background-color: green;
 }
+.initial-question-container  .forgot{
+    text-decoration: line-through;
+    color:#FF3030 ;
+}
+.initial-question-container .almost{
+    text-decoration: line-through;
+    color: #FF922E;
+}
+.initial-question-container .zap{
+    text-decoration: line-through;
+    color: #2FBE34;;
+}
 
 footer{
     width: 100%;
