--- a/public/style.css
+++ b/public/style.css
@@ -189,13 +189,15 @@ main{
 
 footer{
     width: 100%;
-    height: 50px;
+    height: 70px;
     align-items: center;
     bottom: 0;
     position: fixed;
     background-color: #fff;
     display: flex;
     justify-content: center;
+    display: flex;
+    flex-direction: column;
 }
 footer span{
     font-family:'Recursive', sans-serif;
