--- a/public/style.css
+++ b/public/style.css
@@ -199,14 +199,53 @@ footer{
     display: flex;
     flex-direction: column;
 }
+.footer2{
+    height: 171px;
+}
 footer span{
     font-family:'Recursive', sans-serif;
-    position: absolute;
-    width: 145px;
-    height: 22px;
+    width: 222px;
+    height: 44px;
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
     line-height: 22px;
     color: #333333;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.footer2 span {
+    display: flex;
+    width: auto;
+}
+.footer2 div{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.progress-message{
+    font-family:'Recursive', sans-serif;
+    width: 222px;
+    height: 44px;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 22px;
+    color: #333333;
+    text-align: center;
+}
+footer .progress{
+    display: flex;
+    margin-bottom: 10px;
+}
+.progress img{
+    width: 23px;
+    height: 23px;
+    margin-right: 5px;
+}
+.footer2 img{
+    width: 23px;
+    height: 23px;
+    margin-right: 10px;
 }
