--- a/public/style.css
+++ b/public/style.css
@@ -224,9 +224,9 @@ footer span{
     align-items: center;
     justify-content: center;
 }
-.progress-message{
+.footer2 .progress-message{
     font-family:'Recursive', sans-serif;
-    width: 222px;
+    width: 235px;
     height: 44px;
     font-style: normal;
     font-weight: 400;
